prevent layout shift when body comes scrollable

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -273,6 +273,9 @@ body {
 	display: flex;
 	flex-direction: column;
 	min-height: var(--app-height);
+	@media (min-width: 767px) {
+		width: calc(100vw - 7px);
+	}
 }
 
 .content {
