--- a/client/src/components/Common/Header/Header.scss
+++ b/client/src/components/Common/Header/Header.scss
@@ -65,8 +65,11 @@ html[theme="light"] {
 	width: 100%;
 	padding: 5px env(safe-area-inset-right) 5px env(safe-area-inset-left);
 	height: 45px;
-	display: grid;
-	grid-template-columns: 1fr minmax(auto, 900px) 1fr;
+	&__container {
+		position: absolute;
+		display: grid;
+		grid-template-columns: 1fr minmax(auto, 900px) 1fr;
+	}
 	&__menu {
 		height: 35px;
 		grid-column: 2/3;
@@ -158,6 +161,9 @@ html[theme="light"] {
 	}
 	@media (min-width: 767px) {
 		height: 50px;
+		&__container {
+			width: calc(100vw - 7px);
+		}
 		&__logo {
 			font-size: 24px;
 			letter-spacing: 4px;
